2004-12-02  Jim Blandy  <jimb@redhat.com>

	* thread-db.c (thread_db_attach): Always preload the symbol list
	with the names of the symbols RDA uses itself.

	* thread-db.c (thread_db_break_program): New function.
	(thread_db_attach): Register it as the 'break_program' method.

	* ptrace-target.c (kill_lwp): Produce debugging output.

	* lwp-pool.c (check_stop_pending): lwp_state_stopped_interesting
	is not a legitimate state for the LWP to be in.

	Introduce a new STOPPED, STOP PENDING state to the LWP pool model.
	* lwp-pool.c: Many doc fixes.
	(enum lwp_state): Add new value, lwp_state_stopped_stop_pending.
	(lwp_state_str): Provide a name for it.
	(lwp_pool_waitpid): Reject it as an initial state for an LWP whose
	status we'll report.  Produce it when we report the status of a
	STOPPED, STOP PENDING, INTERESTING LWP, rather than continuing
	the LWP and waiting for it again.
	(lwp_pool_stop_all): Recognize it as a stopped state.
	(lwp_pool_continue_all, lwp_pool_continue_lwp,
	lwp_pool_singlestep_lwp): Continue and check for the boring status
	here, instead of in lwp_pool_waitpid.
	(lwp_pool_continue_and_drop_lwp): Just call lwp_pool_continue_lwp,
	instead of writing out its contents again here.

2004-11-29  Jim Blandy  <jimb@redhat.com>

	Move libthread_db event-based thread death logic from lwp-pool.c
	to thread-db.c, so the former can stay innocent of libthread_db's
	details, and limit itself to kernel behavior.
	* lwp-pool.h (lwp_pool_continue_and_drop): New declaration.
	(lwp_pool_thread_db_death_event,
	lwp_pool_thread_db_death_notified): Declarations deleted.
	* lwp-pool.c (enum death_state): Move to thread-db.c.
	(struct lwp): Delete 'death_state' member.
	(hash_find): Don't initialize it.
	(interesting_queue): Don't provide an initializer for it.
	(check_stop_pending): Don't abort if wait_and_handle didn't put
	the thread in a stopped state; that could be caused by kernel
	behavior (say, threads exiting silently), not necessarily a logic